2011-02-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17692: Updating translations does not work anymore
	* Fixed bug #17758: EM: After update repository the info labels are not updated
	* Fixed bug #13309 Text on "Settings" tab needs more space
	* Fixed bug #13310: PHP Warning "array_merge(): Argument #2 is not an array" in class.tx_em_settings.php
	* Fixed bug EM rev 4188: Reimplemented removed function in em_tools and deprecate it
	* Renewed fix #17701: Generated t3x are corrupted in 4.5.1-dev and trunk

2011-02-23  Ernesto Baschny  <ernesto.baschny@typo3.org>

	* Release of TYPO3 4.5.1

2011-02-23  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #17719: Move donation popup to about module (thanks to Steffen Kamper)
	* Follow-up to bug #17719: Removed unused files

2011-02-23  Steffen Kamper  <steffen@typo3.org>

	* Fixed regression in linkvalidator
	* Follow-up in em - little css correction
	* Update codemirror to recent version 0.9.4
	* Merge of extension manager for 4.5.0 - see ChangeLog in em for details
	* Fixed bug #17520: Pagetree - Locked records are not indicated anymore (Thanks to Stefan Galinski)
	* Fixed bug #17702: Directly open "inline edit" of page title after creating a new page with drag and drop in the pagetree (Thanks to Stefan Galinski)

2011-02-23  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17574: defaultMailFromName not used when defaultMailFromAddress is used in mailform (Thanks to Jigal van Hemert)
	* Fixed bug #17314: Swift_RfcComplianceException is always thrown in t3lib_formmail when forceReturnPath=1 is set
	* Updated ext_emconf.php for several changed sysext's
	* Merged Linkvalidator 1.0.1 to be included in 4.5.1 (Thanks to Michael Miousse and Christopher Stelmaszyk). Includes these fixes:
	* Fixed Bug #f12649: Linkvalidator: Split up analyzeRecord()
	* Fixed bug #f12652: Linkvalidator: If none of the link types are marked to be checked, all of them are checked